--- a/conf/config.json.example
+++ b/conf/config.json.example
@@ -2,5 +2,6 @@
     "userName": "",
     "passWord": "",
     "ip": "",
-    "database": ""
+    "database": "",
+    "lastRecordTime": 1646064000
 }
